2002-07-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmPager/FvwmPager.c (list_add):
	(list_configure):
	fixed access to CONFIGURE_WINDOW and ADD_WINDOW packets

2002-07-09  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmPager/x_pager.c (draw_desk_background):
	(initialize_pager):
	(ReConfigure):
	fixed drawing of the active page when resizing the pager
	(DispatchEvent):
	fixed problem w/ pager not updating properly when getting expose events
	right after a resize
	(DrawGrid):
	another label drawing fix w/ labelsbelow

	* FvwmPager/x_pager.c (ReConfigure):
	fixed flickering of hilit desk title when moving pager
	(draw_desk_background):
	(initialize_pager):
	fixed initial drawing of pager label background on inactive desks
	(change_colorset):
	(draw_desk_background):
	fixed drawing of background colour sets w/ top labels in the pager
	 (initialize_pager):
	(ReConfigure):
	fixed initial drawing of multi desk pagers

2002-07-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmButtons/FvwmButtons.c (DeadPipeCleanup):
	spit out panels with the NoClose option when FvwmButton dies

2002-07-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmButtons/FvwmButtons.c (SpawnSome):
	fixed $fg and $bg variables with the UseOld option

2002-07-05  Mikhael Goikhman  <migo@homemail.com>

	* FvwmScript/Widgets/Swallow.c (CheckForHangon):
	fixed a FvwmScript crash with Swallow widget and very long window names

2002-06-10  Mikhael Goikhman  <migo@homemail.com>

	* FvwmPager/FvwmPager.c (ParseOptions):
	* FvwmTaskBar/FvwmTaskBar.c (ParseConfigLine):
	* FvwmTaskBar/Goodies.c (GoodiesParseConfig):
	* FvwmButtons/parse.c (ParseConfigLine):
	* FvwmIconBox/FvwmIconBox.c (ParseOptions):
	* FvwmIconMan/readconfig.c (read_in_resources):
	* FvwmIdent/FvwmIdent.c (main):
	* FvwmForm/FvwmForm.c (ct_*Font):
	* FvwmWinList/FvwmWinList.c (ParseConfigLine):
	* FvwmScript/FvwmScript.c (ParseOptions):
	fixed double quotes in *Font configuration options;
	the current solution is adding CopyStringWithQuotes()
