@@ -1,3 +1,8 @@
+2002-07-14  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmPager/x_pager.c (draw_desk_background):
+	fixed hilighting of desk labels
+
 2002-07-12  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmPager/FvwmPager.c (list_add):
